# crypto-analytics-dashboard

./: AGENTS.md  Makefile  PROJECT_BLUEPRINT.md  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt
DATA_CONTRACTS/: README.md
backend/: .flake8  AGENTS.md  openapi.json  pyproject.toml
backend/app/: config_env.py  db.py  fx_stub.py  logging_utils.py  main.py
backend/app/providers/: __init__.py  coingecko.py  etherscan.py  fx.py  mempool.py
backend/app/rate_limiting/: __init__.py  adaptive_clamps.py  circuit_breaker.py  provider_budgets.py  token_bucket.py
backend/tests/: conftest.py
backend/tests/contract/: test_api_contracts.py  test_health.py
backend/tests/data/: test_schemas.py
backend/tests/fixtures/providers/: coingecko_candles.json  etherscan_gas.json  mempool_space.json
backend/tests/integration/: test_health_checks.py  test_idempotency.py  test_portfolio_import_validation.py
backend/tests/unit/: test_circuit_breaker_states.py  test_coingecko_client.py  test_config_env.py  test_cors.py  test_db.py  test_etherscan_client.py  test_fx_client.py  test_fx_endpoint.py  test_input_sanitization.py  test_logging_and_binding.py  test_main.py  test_mempool_client.py  test_operator_breaker_reset.py  test_rate_limiting.py  test_rate_limiting_circuit_breaker.py
docs/: 0001-provider-budgets-and-adaptive-rate-limits.md  0001-uuidv7-ids.md  CODE_REVIEW.md  DoR.md  EVENTS.md  INTERFACES.md  PRD.md  PROCESS.md  QA_PLAYBOOK.md  RELEASE_PROCESS.md  SECURITY_REQUIREMENTS.md  SLOs.md  SUPPLY_CHAIN.md  TEST_STRATEGY.md  THREAT_MODEL.md  UX_GUIDE.md
(+48 files in other folders)
