
[project]
name = "crypto-analytics-backend"
version = "0.1.0"
description = "FastAPI BFF for local-first crypto analytics"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.uv]
# Using uv for fast installs; optional here for local dev.
