
[project]
name = "crypto-analytics-backend"
version = "0.1.0"
description = "FastAPI BFF for local-first crypto analytics"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.7",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.29",
  "aiosqlite>=0.19.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "requests-mock",
  "fakeredis",
  "openapi-core>=0.19.0",
  "flake8",
]

[tool.uv]
# Using uv for fast installs; optional here for local dev.
